--- a/data/index_br.html
+++ b/data/index_br.html
@@ -100,7 +100,7 @@ Comments here
     </center>
 
     <div class="block">
-      <p style="color:#35e6a0;">Quando em modo Servidor: TCP puro e MQTT não suportados, WebSockets na porta 81</p>
+      <p style="color:#35e6a0;">Quando em modo Servidor:MQTT não suportado, WebSockets na porta 81, TCP puro(Telnet) na porta 23</p>
       <p style="color:#35e6a3;">Envie somente os dados que deseja alterar, mas preencha todos os campos de cada seção desejada.</p>
       <!-- <p style="color:#35e6a3;">No fim, pressione<strong>Salvar</strong>.</p> -->
 
