--- a/data/index_en.html
+++ b/data/index_en.html
@@ -4,7 +4,7 @@ Comments here
 -->
 <html>
   <head>
-    <title>My Thing's Setup</title>
+    <title>Setup</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -95,12 +95,12 @@ Comments here
 
     <center>
       <div>
-        <h1>My Thing's Setup</h1>
+        <h1>Setup</h1>
       </div>
     </center>
 
     <div class="block">
-      <p style="color:#35e6a0;">For Server mode: Raw TCP and MQTT not supported, WebSockets using port 81</p>
+      <p style="color:#35e6a0;">For Server mode:MQTT not supported, WebSockets using port 81, raw TCP using port 23</p>
       <p style="color:#35e6a3;">Just submit the data you want to change, but fill every field that will be needed in the desired section (green box).</p>
       <!-- <p style="color:#35e6a3;">No fim, pressione<strong>Salvar</strong>.</p> -->
 
